--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,12 @@
 [site]
+
+  sitetitle = "Cinéfil'm"
+  sitedescription = "Le site des amoureux du cinoche !"
   landing = 'home.html'
   charset = utf8
   lang = fr
+
+
 
 [database]
   host = localhost
