--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [site]
 
-  sitetitle = "Cinéfil'm"
+  sitetitle = "CinéVore"
   sitedescription = "Le site des amoureux du cinoche !"
   landing = 'home.html'
   charset = utf8
@@ -10,7 +10,7 @@
 
 [database]
   host = localhost
-  name = Cafeinline
+  name = cafeinline
   login = Next
   passwd = Next
   charset = utf8
