Mise à jour : améliorations diverses (routage et centrage d'éléments avec bootstrap

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 
   sitetitle = "CinéVore"
   sitedescription = "Le site des amoureux du cinoche !"
-  landing = 'home.html'
+  landing = 'home'
   charset = utf8
   lang = fr
 
