ajout scss css carousel footer marie ange

--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,6 @@
 [database]
   host = localhost
   name = Cafeinline
-  login = Next
-  passwd = Next
+  login = root
+  passwd = 
   charset = utf8
