--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,6 @@
 [database]
   host = localhost
   name = cafeinline
-  login = Next
-  passwd = Next
+  login = root
+  passwd =
   charset = utf8
