--- a/config.ini
+++ b/config.ini
@@ -7,8 +7,8 @@
 
 
 [database]
-  host = localhost
+  host = 
   name = cafeinline
-  login = Next
-  passwd = Next
+  login = root
+  passwd = 
   charset = utf8
